fixed logging in issues

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://<lucy>:<liklik123>@cluster0.1yzim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://lucy:liklik123@cluster0.1yzim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secure_jwt_secret_key
 NODE_ENV=development
